# moiro

./: README.md
moiro/: CMakeLists.txt  package.xml
moiro_bringup/: CMakeLists.txt  package.xml
moiro_description/: CMakeLists.txt  package.xml
moiro_teleop/: package.xml  setup.cfg  setup.py
moiro_yolo/: package.xml  setup.cfg  setup.py
moiro_yolo/moiro_yolo/: moiro_yolo_node.py
moiro_yolov8/: package.xml  setup.cfg  setup.py
