<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moiro</name>
  <version>0.0.0</version>
  <description>
      ROS 2 package for MOIRO
  </description>
  <maintainer email="mincheol710313@gmail.com">godssi</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moiro_bringup</exec_depend>
  <exec_depend>moiro_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
