<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moiro_description</name>
  <version>0.0.0</version>
  <description>
      3D model of the MOIRO for simulation and visualization
  </description>
  <maintainer email="mincheol710313@gmail.com">godssi</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
